# goldrush-sluice-3d

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  FLUID_SIMULATION_RESEARCH.md  MULTI_PHASE_FLIP_RESEARCH.md  README.md  VORTEX_TESTING_RESEARCH.md  default_plant.json  editor_layout.json  todo-legacy-ca-gravity.md  todo-physics-units.md  todo-physics-wiring.md  todo-sediment-doc-tests.md  todo-sediment-params.md  todo-sediment-system-choice.md  todo-sim-stack-separation.md
crates/game/: Cargo.toml
crates/game/examples/: benchmark.rs  box_3d_test.rs  chained_grids.rs  chained_grids_visual.rs  cluster_3d_visual.rs  collapse_demo.rs  collision_test.rs  dam_break_3d.rs  dam_break_3d_visual.rs  dem_settling_diagnostic.rs  dem_sluice_test.rs  detail_zone.rs  dig_test.rs  fill_box.rs  flip_test_harness.rs  flow_test.rs  friction_sluice.rs  generate_scenarios.rs  gold_sluice_3d.rs  gpu_dem_flip_test.rs  gpu_dem_test.rs  gpu_terrain_test.rs  horizontal_flow.rs  hydrostatic_test.rs  hydrostatic_visual.rs  industrial_sluice.rs  large_scale_fluids_visual.rs  overflow_visual.rs  panning_minigame.rs  physics_validation.rs  pressure_gradient_test.rs  repro_sdf.rs  riffle_chute_visual.rs  riffle_diagnostic.rs  river_erosion.rs  river_flow.rs  river_test.rs  sediment_stages_visual.rs  sediment_test.rs  settling_breach.rs  (+29 more)
crates/game/scenarios/: dem_density_separation.golden.json  dem_density_separation.json  dem_floor_collision.golden.json  dem_floor_collision.json  dem_settling_time.golden.json  dem_settling_time.json  dem_wall_collision.golden.json  dem_wall_collision.json
(+827 files in other folders)
