[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
default = []
panning = ["dep:rand"]
macroquad-examples = ["dep:macroquad", "dep:rand"]

[dependencies]
wgpu = "23"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { workspace = true }
sim3d = { path = "../sim3d" }
env_logger = "0.11"
log = "0.4"
macroquad = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }

