[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
default = []
panning = ["dep:rand"]
gpu-dem = ["dep:rand"]
macroquad-examples = ["dep:macroquad", "dep:rand"]

[dependencies]
wgpu = "23"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { workspace = true }
sim3d = { path = "../sim3d" }
env_logger = "0.11"
log = "0.4"
macroquad = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
png = "0.17"

[dev-dependencies]
naga = { version = "28.0.0", features = ["wgsl-in"] }
proptest = "1.4"

[[example]]
name = "gpu_dem_test"
path = "examples/gpu_dem_test.rs"
required-features = ["gpu-dem"]

[[example]]
name = "gpu_dem_flip_test"
path = "examples/gpu_dem_flip_test.rs"
required-features = ["gpu-dem"]
